<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center"
        app:navigationIcon="@mipmap/ic_back"
        app:title=" ">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_temp"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/btn_check_test_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_check_test_temp_status" />

        <Button
            android:id="@+id/btn_start_measure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_check_test_status"
            android:text="@string/app_start_measure" />

        <Button
            android:id="@+id/btn_stop_measure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_start_measure"
            android:text="@string/app_stop_measure" />

        <Button
            android:id="@+id/btn_read_temp_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_stop_measure"
            android:text="@string/app_read_temp_setting" />

        <Switch
            android:id="@+id/sw_show_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_read_temp_setting"
            android:text="@string/app_temp_show" />

        <Switch
            android:id="@+id/sw_temp_adjust"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sw_show_temp"
            android:text="@string/app_temp_adjust" />

        <Switch
            android:id="@+id/sw_temp_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sw_temp_adjust"
            android:text="@string/app_temp_unit" />

        <Button
            android:id="@+id/btn_set_temp_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sw_temp_unit"
            android:text="@string/app_set_temp_setting" />

    </RelativeLayout>

</RelativeLayout>