<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center"
        app:navigationIcon="@mipmap/ic_back"
        app:title=" ">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_sedentary"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>


    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/btn_read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_read" />

        <RadioGroup
            android:id="@+id/rg_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_read"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/app_open" />

            <RadioButton
                android:id="@+id/rb_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/app_close" />

        </RadioGroup>

        <EditText
            android:id="@+id/et_max"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rg_status"
            android:hint="@string/app_max_value" />

        <EditText
            android:id="@+id/et_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_max"
            android:hint="@string/app_interval" />

        <EditText
            android:id="@+id/et_start_minute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_interval"
            android:hint="@string/app_start_minute" />

        <EditText
            android:id="@+id/et_end_minute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_start_minute"
            android:hint="@string/app_end_minute" />

        <Button
            android:id="@+id/btn_set_sedentary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_end_minute"
            android:text="@string/app_set" />


    </RelativeLayout>

</RelativeLayout>