<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center"
        app:navigationIcon="@mipmap/ic_back"
        app:title=" ">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_rate"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">


        <Button
            android:id="@+id/btn_start_measure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_start_measure" />

        <Button
            android:id="@+id/btn_stop_measure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_start_measure"
            android:text="@string/app_stop_measure" />

        <Button
            android:id="@+id/btn_read_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_stop_measure"
            android:text="@string/app_read_local" />

    </RelativeLayout>

</RelativeLayout>