<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center"
        app:navigationIcon="@mipmap/ic_back"
        app:title=" ">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_goal_setting"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/et_step_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/app_step_goal"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_step_goal"
            android:text="@string/app_set" />

        <EditText
            android:id="@+id/et_sleep_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_set"
            android:hint="@string/app_sleep_goal"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_set_sleep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_sleep_goal"
            android:text="@string/app_set" />

    </RelativeLayout>

</RelativeLayout>